textareas logical height with overflow auto shouldn't add scrollbar-thickness https://bugs.webkit.org/show_bug.cgi?id=256811 <rdar://problem/109384976>

Reviewed by Simon Fraser.

"This change fixes the scrollbar thickness incorrectly being included in the textarea when overflow is hidden or clipped."
Merged from Blink: https://chromium.googlesource.com/chromium/src/+/18481ffa332076e58fd9adbbea2062c2ba087dfb

* Source/WebCore/rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::computeLogicalHeight const):

* LayoutTests/platform/ios-wk2/fast/forms/basic-textareas-quirks-expected.txt:
* LayoutTests/platform/ios/fast/forms/basic-textareas-expected.txt:
* LayoutTests/platform/mac/fast/forms/basic-textareas-expected.txt: interop progression.
* LayoutTests/platform/mac/fast/forms/basic-textareas-quirks-expected.txt: interop progression.
* Source/WebCore/rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::computeLogicalHeight const):

Canonical link: https://commits.webkit.org/264251@main